2012-09-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp (wallpaper): create/use-background
	simplification function.

2012-09-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/wallpaper.lisp: New functionality to handle backgrounds
	on differents screen heads.

	* contrib/toolbar.lisp (toolbar-adjust-root-size): Takes care of
	multiple toolbar on the same root edge.

2012-09-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-all-children): Hide only children
	hidden by normal windows or frames (but not :dialog,
	:transient...).
	(process-new-window): Remove borders for maxsize windows.
	(show-all-children): Let the choice to always display children or
	to optimize by hidding children not seen . The first option is
	better with transparency support (frames behind orther frames are
	seen). The second one is faster with many children in the same
	frame (not seen children are not displayed).

2012-08-31  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Handle all Xlib errors
	for better code protection.

2012-08-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-query-key-press-hook): Add
	an option to immediately select child if they can be directly
	accessed.

2012-08-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/volume-mode.lisp: Add mouse buttons actions in volume
	mode. Add a volume button toolbar module.

2012-08-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp: New toolbar modules (available only if
	toolbar.lisp is loaded).
	Add a small parameter for toolbar modules useful with vertical
	toolbars.

2012-08-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/reboot-halt.lisp: Add configuration command for system
	actions.

	* contrib/toolbar.lisp (toggle-toolbar-hide-state): New function.

2012-08-20  Philippe Brochard  <pbrochard@common-lisp.net>
