@@ -1,3 +1,7 @@
+2012-09-09  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/*.lisp: Remove uneeded with-xlib-protect.
+
 2012-09-06  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* contrib/wallpaper.lisp (wallpaper): create/use-background
